# pbi-grid

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/countries_population/: pbi_grid_default_theme_layout.yaml  pbi_grid_govbr_theme_layout.yaml
examples/countries_population/source/: countries_population.pbip
examples/countries_population/source/countries_population.Report/: .platform  definition.pbir
examples/sample_theme_govbr/: sample_theme_govbr.pbip  sample_theme_govbr_layout.yaml
examples/sample_theme_govbr/sample_theme_govbr.Report/: .platform  definition.pbir
examples/sample_theme_govbr/sample_theme_govbr.SemanticModel/: .platform
src/: cli.py  packages.py  pbir_utils.py
src/components/: __init__.py  base.py  footer.py  header.py  menu.py
src/grid/: engine.py  extractor.py  info_table.py  renderer.py  scaffold.py  schema.py
src/models/: __init__.py  page.py  position.py  report.py  visual.py
tests/: conftest.py
tests/integration/: conftest.py  test_extract.py  test_generate_default.py  test_generate_govbr.py
tests/unit/: test_pbir_utils.py
tests/unit/components/: test_footer.py  test_header.py  test_menu.py
tests/unit/grid/: test_engine.py  test_extractor.py  test_info_table.py  test_schema.py
themes/capes/: tokens.yaml
themes/default/: tokens.yaml  visual_defaults.yaml
themes/default/layouts/: dashboard.yaml  report.yaml
themes/govbr/: tokens.yaml  visual_defaults.yaml
themes/govbr/layouts/: dashboard.yaml  report.yaml
util/: commit-prompt.ps1  commit-prompt.sh  update-golden.ps1
(+147 files in other folders)
