[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pbi-grid"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
pbi-grid = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
pythonpath = ["."]
markers = ["integration: testes que acessam o filesystem (examples/, tests/golden/)"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
